# content-flow

./: .env.example  .gitignore  .windsurfrules  CLAUDE.md  DATABASE_IMPLEMENTATION.md  ERROR_HANDLING_README.md  MCP_CONFIGURATION_RULES.md  README.md  README_DESCRIPT_AUTH.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  test-localstorage.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/commands/: tm-parallel.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: comprehensive-analysis.md  prd.txt
.taskmaster/tasks/: tasks.json
docs/: Brain-Lift.md  atomic-design-system.md  entity-relationship-diagram.md  functional-requirements.md  system-architecture.md  user-flow.md
src/: App.tsx  index.css  main.tsx  test-atoms.tsx  test-workflow-init.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  main_example.rs
src-tauri/src/commands/: auth.rs  content.rs  database.rs  files.rs  mod.rs  settings.rs  templates.rs  transcripts.rs  upload.rs
src-tauri/src/db/: README.md  connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_custom_templates.sql
src-tauri/src/services/: descript.rs  descript_auth.rs  mod.rs  settings.rs
src/components/atoms/: AuthButton.tsx  index.ts
src/components/molecules/: AuthStatus.tsx  DebugPanel.tsx  index.ts
src/components/organisms/: AuthGuard.tsx  index.ts
src/config/: workflow.config.ts
src/contexts/: ThemeContext.tsx
src/examples/: error-handling-example.tsx  workflow-examples.ts
src/hooks/: useTranscriptImport.ts
src/lib/: async-hooks-polyfill.ts  browser-error-handler.ts  browser-logger.ts  browser-polyfills.ts  crypto.ts  error-handler.ts  error-integration.ts  logger.ts  mock-content-generator.ts  mock-transcripts.ts  tauri-wrapper.ts
src/lib/auth/: AuthContext.tsx
src/screens/: AuthCallback.tsx  ContentLibrary.tsx  ContentStudio.tsx  DatabaseStatus.tsx  FileOrganizer.tsx  MediaHub.tsx  Settings.tsx  TemplateStudio.tsx  TranscriptLibrary.tsx  VideoImport.tsx  WelcomeScreen.tsx
src/services/: tag-extraction.service.ts
src/store/: apiKey.store.ts  app.store.ts  content.store.ts  settings.store.ts  template.store.ts  transcript.store.ts  ui.store.ts  usage.store.ts
src/tokens/: animation.ts  borders.ts  breakpoints.ts  colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts  zIndex.ts
src/workflows/: README.md  base-workflow.ts  content-generation.workflow.ts  index.ts  multi-source.workflow.ts  transcript-analysis.workflow.ts
(+115 files in other folders)
